--- a/templates/request.html
+++ b/templates/request.html
@@ -3,6 +3,11 @@
 {% block content %}
     <div class="row"><div class="col-sm-4"></div>
         <div class="col-sm-4">
+            {% if error_msg %}
+                <div class="alert alert-danger">
+                    {{ error_msg }}
+                </div>
+   {% endif %}
         <form class="form" method="post" action="{% url 'requests' %}">
             <div class="input-group" >
                     {% csrf_token %}
