--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% if error_msg %}
+   	<div class="alert alert-danger">
+  		 {{ error_msg }}
+	</div>
+   {% endif %}
     <div class="row"><div class="col-sm-2"></div>
         <div class="col-sm-8">
         <form class="form" method="post" action="{% url 'search' %}">
@@ -10,8 +15,8 @@
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit" style="color: #2980b9">Пошук</button>
                     </span>
-                </div>
-                </form>
+            </div>
+        </form>
             {% block results %} {% endblock %}
 </div></div>
         <div class="col-sm-2"></div>
