--- a/templates/positive_extract.html
+++ b/templates/positive_extract.html
@@ -27,7 +27,7 @@
                           <p class="smaller"><b>Номер витягу:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.number }} </p>
                       </td>
                   </tr>
                    <tr>
@@ -35,7 +35,7 @@
                           <p class="smaller"><b>Дата формування:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller" align="left"> 123577 </p>
+                          <p class="smaller" align="left"> {{ e.formingdate }}</p>
                       </td>
                   </tr>
                   <tr>
@@ -48,7 +48,7 @@
                           <p class="smaller"><b>Відомості про заявника, який звернувся за наданням витягу:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.applicantinfo }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -71,7 +71,11 @@
                           <p class="smaller"><b>Прізвище, ім’я, по батькові:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller">
+                              {{ e.requestid.passportid.lastname }}
+                              {{ e.requestid.passportid.firstname }}
+                              {{ e.requestid.passportid.secondname }}
+                          </p>
                       </td>
                   </tr>
                   <tr>
@@ -84,7 +88,7 @@
                           <p class="smaller"><b>Реєстраційний номер облікової картки платника податків:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.taxcode }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -97,7 +101,7 @@
                           <p class="smaller"><b>Місце народження:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.passportid.birthplace }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -110,7 +114,7 @@
                           <p class="smaller"><b>Дата народження:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.passportid.birthdate }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -140,7 +144,11 @@
                           <p class="smaller"><b>Прізвище, ім’я, по батькові:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller">
+                              {{ e.personid.passportid.lastname }}
+                              {{ e.personid.passportid.firstname }}
+                              {{ e.personid.passportid.secondname }}
+                          </p>
                       </td>
                   </tr>
                   <tr>
@@ -158,7 +166,7 @@
                           <p class="smaller"><b>Місце народження:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.passportid.birthplace }}</p>
                       </td>
                   </tr>
                   <tr>
@@ -176,7 +184,7 @@
                           <p class="smaller"><b>Дата народження:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.passportid.birthdate}} </p>
                       </td>
                   </tr>
                   <tr>
@@ -194,7 +202,10 @@
                           <p class="smaller"><b>Серія та номер паспорта:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller">
+                              {{ e.personid.passportid.series }}
+                              {{ e.personid.passportid.number }}
+                          </p>
                       </td>
                   </tr>
                   <tr>
@@ -212,7 +223,7 @@
                           <p class="smaller"><b>Реєстраційний номер облікової картки платника податків:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.taxcode }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -231,7 +242,7 @@
                               «Про очищення влади»:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.workplace }}</p>
                       </td>
                   </tr>
                   <tr>
@@ -249,7 +260,7 @@
                           <p class="smaller"><b>Посада:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.workpost }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -267,7 +278,7 @@
                           <p class="smaller"><b>Відомості про стан проходження перевірки:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.checkresult }} </p>
                       </td>
                   </tr>
                   <tr>
@@ -286,7 +297,7 @@
                               передбачена Законом України «Про очищення влади»:</b></p>
                       </td>
                       <td width="413">
-                          <p class="smaller"> 123577 </p>
+                          <p class="smaller"> {{ e.personid.startingterm }} </p>
                       </td>
                   </tr>
                   <tr>
